Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-36080

Can't compile Qt 5.2 on FreeBSD

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 5.3.0
    • 5.2.0
    • Core: Date/Time
    • None
    • 91d3298eab791ab2351c6be8714ab3b2bde9758e

    Description

      In file qdatetime.cpp function static int qt_timezone() :

      static int qt_timezone()
      {
      #if defined(Q_OS_WINCE)
      ...
      #elif defined(_MSC_VER) && _MSC_VER >= 1400
      ...
      #else
      return timezone;
      ^^^^^^^^^^^^^^^^
      #endif // Q_OS_WIN
      }

      This is correct on Linux, but on FreeBSD timezone is not variable, it's function defined in /usr/src/include/time.h:

      char *timezone(int, int);

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            johnlayt John Layt
            hantarex Serge
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes