Fix compilation error on FreeBSD

timezone is defined differently in FreeBSD compared to other
(more or less) POSIX-compliant Unices.

Task-number: QTBUG-36080
Change-Id: I4ad1a5ccd0b9ddbadb9fdd90edc26cf0c7252dfb
Reviewed-by: Thiago Macieira <thiago.macieira@intel.com>